# osm-area-tools

./: .clang-tidy  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md  area-errors.qgs  oat_create_areas.md
.github/actions/install-macos/: action.yml
.github/actions/install-ubuntu/: action.yml
.github/workflows/: ci.yml
src/: CMakeLists.txt  oat.cpp  oat.hpp  oat_closed_way_filter.cpp  oat_closed_way_tags.cpp  oat_complex_areas.cpp  oat_create_areas.cpp  oat_failed_area_tags.cpp  oat_find_problems.cpp  oat_large_areas.cpp  oat_mercator.cpp  oat_problem_report.cpp  oat_sizes.cpp  oat_stats.cpp
